2007-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (OpenBlob): Disable reading input files using
	memory mapping since it has been learned that some operating
	systems fail to do read-ahead on network files.  Without
	read-ahead, performance is poor.
	* magick/resource.c (AcquireMagickResource): Map resource limit
	was not being properly checked due to a typo.  The memory limit
	was being tested instead.
	* coders/tiff.c (ReadTIFFImage): Use libtiff to decode OJPEG
	compressed files into RGB.  Probably requires new OJPEG
	implementation from Joris Van Damme which is new in libtiff and
	not yet released. I am not completely sure that this approach is
	correct yet.

2007-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXGetWindowImage): Set image->depth
	appropriately.
	* many files: Compiler warnings reduction.

2007-05-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cineon.c (ReadCINEONImage): Alter sample scaling
	algorithm a bit.	
	* tests/rwblob.c, tests/rwfile.c: Allow some slop when testing
	Cineon format with QuantumDepth=8 since we are currently only
	supporting 10 bit samples.

2007-05-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (ReadJPEGImage): Fix reading 12-bit grayscale
	JPEG.

2007-05-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cineon.c (WriteCINEONImage): Re-wrote Cineon writer from
	scratch.  There is no code originating from ImageMagick in this
	source module any more.

2007-04-30  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/art.c, coders.cut.c, coders/mat.c, coders/wpg.c: Add
	support for PingImage() so that image identification is fast by
	default.  Also eliminates error message produced by mat.c due to
	rotating an image which has no pixel cache.

2007-04-09  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c (ReadWPGImage): Fix for SourceForge bug id 1431805