@@ -830,6 +830,8 @@ static Image *ReadMIFFImage(const ImageInfo *image_info,
                   break;
             }
             *p='\0';
+            (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                                  "keyword=\"%s\" values=\"%s\"",keyword,values);
             /*
               Assign a value to the specified keyword.
             */
@@ -887,15 +889,18 @@ static Image *ReadMIFFImage(const ImageInfo *image_info,
                 if (LocaleCompare(keyword,"compression") == 0)
                   {
                     image->compression=UndefinedCompression;
-                    if (LocaleCompare(values,"Zip") == 0)
-                      image->compression=ZipCompression;
+                    if (LocaleCompare(values,"None") == 0)
+                      image->compression=NoCompression;
                     else
-                      if (LocaleCompare(values,"BZip") == 0)
-                        image->compression=BZipCompression;
+                      if (LocaleCompare(values,"Zip") == 0)
+                        image->compression=ZipCompression;
                       else
-                        if ((LocaleCompare(values,"RLE") == 0) ||
-                            (LocaleCompare(values,"RunlengthEncoded") == 0))
-                          image->compression=RLECompression;
+                        if (LocaleCompare(values,"BZip") == 0)
+                          image->compression=BZipCompression;
+                        else
+                          if ((LocaleCompare(values,"RLE") == 0) ||
+                              (LocaleCompare(values,"RunlengthEncoded") == 0))
+                            image->compression=RLECompression;
                     break;
                   }
                 if (LocaleCompare(keyword,"columns") == 0)
