@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2007-06-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/miff.c (ReadMIFFImage): Handle case where compression
+        keyword is present but has value of 'None'.
+
+</UL>
+<p>
 2007-06-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
